# fraud-detection-bigdata

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
models/: xgb_model.pkl
src/: aed.ipynb
src/dashboard/: app.py  requirements.txt
src/gold/: Dockerfile  gold_service.py  requirements.txt
src/ingestion/consumer/: Dockerfile  config.py  consumer.py  requirements.txt  schemas.py  storage.py  transformer.py
src/ingestion/producer/: producer.py  requirements.txt
src/notebooks/: aed.ipynb  model.ipynb  model_smote.ipynb
src/scripts/: download_csv.py
